// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders catalog 1`] = `
<div
  className="HeaderCatalog-root-30"
>
  <div
    className="HeaderCatalog-streamUserBlock-31"
  >
    <p
      className="HeaderCatalog-streamUserHello-32"
    >
      Hello, Ben A 
      <br />
      <a
        className="HeaderCatalog-streamUserVerification-33"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderCatalog-streamUserPhoto-34"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`renders game 1`] = `
<div
  className="HeaderGame-root-20"
>
  <div
    className="HeaderGame-gameUserBlock-21"
  >
    <p
      className="HeaderGame-gameUserHello-22"
    >
      Hello, Ben A 
      <br />
      <a
        className="HeaderGame-gameUserVerification-23"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderGame-gameUserPhoto-24"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
</div>
`;

exports[`renders games 1`] = `
<div
  className="HeaderGames-root-25"
>
  <div
    className="HeaderGames-gamesUserBlock-26"
  >
    <p
      className="HeaderGames-gamesUserHello-27"
    >
       Hello, Ben A 
      <br />
      <a
        className="HeaderGames-gamesUserVerification-28"
        href="/"
        onClick={[Function]}
      >
        KYC VERIFICATION
      </a>
    </p>
    <div
      className="HeaderGames-gamesUserPhoto-29"
    >
      <img
        alt=""
        src="user.jpg"
      />
    </div>
  </div>
  <div>
    Test
  </div>
</div>
`;

exports[`renders main 1`] = `
<header
  className="HeaderMain-root-1"
>
  <div
    className="UserBlock-root-2"
  >
    <div
      className="UserBlock-user-3"
    >
      <div
        className="UserBlock-userBlock-4"
      >
        <p
          className="UserBlock-userHello-5"
        >
          Hello, anonymous 
          <br />
          <a
            className="UserBlock-userVerification-6"
            href="/"
            onClick={[Function]}
          >
            KYC VERIFICATION
          </a>
        </p>
        <div
          className="UserBlock-userPhoto-7"
        >
          <img
            alt=""
            src="user.jpg"
          />
        </div>
      </div>
    </div>
  </div>
</header>
`;
